<resources>
    <string name="app_name">Labs20221-Gr04</string>
    <string name="txt_español_infoPersona">Información personal</string>
    <string name="txt_español_infoContact">Información de contacto</string>
    <string name="txt_español_name">Nombre</string>
    <string name="txt_español_last_name">Apellido</string>
    <string name="txt_español_sexo">Sexo:</string>
    <string name="txt_español_male">Hombre</string>
    <string name="txt_español_female">Mujer</string>
    <string name="txt_español_data_of_birth">Fecha de nacimiento</string>
    <string name="txt_español_school_grade">Grado de escolaridad</string>
    <string name="txt_español_required">Requerido*</string>
    <string name="txt_español_btn_change_date">Cambiar</string>
    <string name="txt_español_btn_next">Siguiente</string>
    <string name="txt_español_telephone">Telefono</string>
    <string name="txt_español_address">Dirección</string>
    <string name="txt_español_email">Correo</string>
    <string name="txt_español_country">Pais</string>
    <string name="txt_español_city">Ciudad</string>
    <string name="phoneError">Ingrese un telefono valido</string>

    <string-array name="array_español_school_grade">
        <item>Primaria</item>
        <item>Segundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>
    <string-array name="array_español_countries">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El salvador</item>
        <item>Guatemala</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>República Dominicana</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
    <string-array name="array_español_cities">
        <item>Apartadó</item>
        <item>Armenia</item>
        <item>Barrancabermeja</item>
        <item>Barranquilla</item>
        <item>Bogotá D.C</item>
        <item>Bucaramanga</item>
        <item>Buenaventura</item>
        <item>Buga</item>
        <item>Cali</item>
        <item>Cartagena</item>
        <item>Cartago</item>
        <item>Caucasia</item>
        <item>Ciénaga</item>
        <item>Ciudad de Arauca</item>
        <item>Ciudad de San Andrés</item>
        <item>Cúcuta</item>
        <item>Duitama</item>
        <item>Florencia</item>
        <item>Fusagasugá</item>
        <item>Girardot</item>
        <item>Honda</item>
        <item>Ibagué</item>
        <item>Inírida</item>
        <item>Ipiales</item>
        <item>Leticia</item>
        <item>Maicao</item>
        <item>Málaga</item>
        <item>Manizales</item>
        <item>Medellín</item>
        <item>Mitú</item>
        <item>Mocoa</item>
        <item>Montería</item>
        <item>Neiva</item>
        <item>Ocaña</item>
        <item>Palmira</item>
        <item>Pamplona</item>
        <item>Pasto</item>
        <item>Pereira</item>
        <item>Popayán</item>
        <item>Puerto Asís</item>
        <item>Puerto Carreño</item>
        <item>Quibdó</item>
        <item>Riohacha</item>
        <item>Rionegro</item>
        <item>San Gil</item>
        <item>San José</item>
        <item>Santa Marta</item>
        <item>Sincelejo</item>
        <item>Sogamoso</item>
        <item>Tuluá</item>
        <item>Tumaco</item>
        <item>Tunja</item>
        <item>Turbo</item>
        <item>Valledupar</item>
        <item>Villavicencio</item>
        <item>Yopal</item>
    </string-array>
</resources>